refactor(controller): 게임 진행 흐름 개선 및 배팅 로직 추가